# extended_openai_conversation

./: .gitignore  CLAUDE.md  DISCARD_COMMITS_GUIDE.md  QUICK_REFERENCE_DISCARD_COMMITS.md  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml  hacs.yaml
custom_components/extended_openai_conversation/: __init__.py  ai_task.py  config_flow.py  const.py  conversation.py  entity.py  helpers.py  manifest.json  services.py  services.yaml  skills.py  strings.json  template.py
custom_components/extended_openai_conversation/translations/: de.json  el.json  en.json  fr.json  hu.json  it.json  ko.json  nl.json  pl.json  pt-BR.json  pt.json
docs/: AGENTS.md  configuration.mdx  docs.json  index.mdx  installation.mdx  services.mdx
docs/functions/: bash.mdx  composite.mdx  edit_file.mdx  native.mdx  overview.mdx  read_file.mdx  rest.mdx  scrape.mdx  script.mdx  sqlite.mdx  template.mdx  write_file.mdx
docs/help/: faq.mdx
docs/skills/: creating-skills.mdx  discover-skills.mdx  overview.mdx
examples/skills/: README.md
tests/: __init__.py  conftest.py  helpers.py
tests/function_executors/: __init__.py  test_base.py  test_bash.py  test_composite.py  test_edit_file.py  test_native.py  test_read_file.py  test_rest.py  test_scrape.py  test_script.py  test_sqlite.py  test_template.py  test_write_file.py
tests/functions/: __init__.py  test_base.py  test_bash.py  test_composite.py  test_edit_file.py  test_native.py  test_read_file.py  test_rest.py  test_scrape.py  test_script.py  test_sqlite.py  test_template.py  test_write_file.py
(+22 files in other folders)
